--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@vite-pwa/nuxt": "^1.0.1",
     "nuxt": "^3.17.3",
+    "panzoom": "^9.4.3",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
